--- a/app/elements/editor-console/code-editor.html
+++ b/app/elements/editor-console/code-editor.html
@@ -1,66 +1,66 @@
 <dom-module id="code-editor">
-  <template>
-    <iron-ajax
-      id="runCodeRequest"
-      handle-as="json"
-      on-response="onResponse"
-      on-error="onError"
-      debounce-duration="1000"
-      content-type="application/json"
-      >
-    </iron-ajax>
-    <div id="editor" style="height: 850px;"></div>
-  </template>
-  <script src="/bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
-  <script src="/bower_components/ace-min-noconflict/ext-language_tools.js" type="application/javascript"></script>
-  <script>
-    Polymer({
-      is: 'code-editor',
-      properties: {
-      },
-      ready: function(){
-        ace.require("ace/ext/language_tools");
-        this.$.editor = ace.edit(this.$.editor);
-        this.$.editor.setTheme('ace/theme/chrome');
-        this.$.editor.setOptions({
-          enableBasicAutocompletion: true
-        });
-      },
-      runCode: function(lang, taskKey){
-        var data = {
-          'Language': lang,
-          'Code': this.getText()
-        }
-        post(this.$.runCodeRequest, "/results/"+ localStorage.getItem("result") + "/tasks/" + taskKey +"/submissions", data);
-      },
-      getText: function(){
-        return this.$.editor.getValue();
-      },
-      setMode: function(lang){
-        var mode = "ace/mode/java"
-        switch(lang){
-          case "py":
-            mode = "ace/mode/python"
-            break;
-          case "c":
-            mode = "ace/mode/c_cpp"
-            break;
-          case "cpp":
-            mode = "ace/mode/c_cpp"
-            break;
-        }
-        this.$.editor.getSession().setMode({
-          path: mode,
-          v: Date.now()
-        });
-      },
-      onError: function(error){
-        handleError(error);
-      },
-      onResponse: function(r){
+	<template>
+		<iron-ajax
+			id="runCodeRequest"
+			handle-as="json"
+			on-response="onResponse"
+			on-error="onError"
+			debounce-duration="1000"
+			content-type="application/json"
+			>
+		</iron-ajax>
+		<div id="editor" style="height: 850px; z-index:0;"></div>
+	</template>
+	<script src="/bower_components/ace-min-noconflict/ace.js" type="application/javascript"></script>
+	<script src="/bower_components/ace-min-noconflict/ext-language_tools.js" type="application/javascript"></script>
+	<script>
+		Polymer({
+			is: 'code-editor',
+			properties: {
+			},
+			ready: function(){
+				ace.require("ace/ext/language_tools");
+				this.$.editor = ace.edit(this.$.editor);
+				this.$.editor.setTheme('ace/theme/chrome');
+				this.$.editor.setOptions({
+					enableBasicAutocompletion: true
+				});
+			},
+			runCode: function(lang, taskKey){
+				var data = {
+					'Language': lang,
+					'Code': this.getText()
+				}
+				post(this.$.runCodeRequest, "/results/"+ localStorage.getItem("result") + "/tasks/" + taskKey +"/submissions", data);
+			},
+			getText: function(){
+				return this.$.editor.getValue();
+			},
+			setMode: function(lang){
+				var mode = "ace/mode/java"
+				switch(lang){
+					case "py":
+						mode = "ace/mode/python"
+						break;
+					case "c":
+						mode = "ace/mode/c_cpp"
+						break;
+					case "cpp":
+						mode = "ace/mode/c_cpp"
+						break;
+				}
+				this.$.editor.getSession().setMode({
+					path: mode,
+					v: Date.now()
+				});
+			},
+			onError: function(error){
+				handleError(error);
+			},
+			onResponse: function(r){
 
-      }
-    });
+			}
+		});
 
-  </script>
+	</script>
 </dom-module>
