clean: Remoldd code, comment login-page-email

--- a/app/elements/login-page-email/login-page-email.html
+++ b/app/elements/login-page-email/login-page-email.html
@@ -26,7 +26,7 @@ paper-material > div {
 }
 
 paper-material > div:first-child {
-	height: 15%; /* 2*iron-icon.huge(width) - 2 * padding */
+	height: 15%;
 	max-height: 248px;
 	padding: 10%;
 	background: #424b4b;
@@ -48,10 +48,6 @@ paper-material > div > paper-button {
 
 	margin: 0 !important;
 	margin-top: 12px !important;
-}
-
-paper-material > div > paper-button.empty::shadow paper-ripple {
-  color: red;
 }
 	</style>
 	<template>
