fix: Re-add route rename 500 -> error
My bad, I overlooked that while resolving conflicts.

--- a/app/index.html
+++ b/app/index.html
@@ -165,8 +165,8 @@
 							</paper-material>
 						</section>
 
-						<section data-route="500">
-							<error-page id="error500"></error-page>
+						<section data-route="error">
+							<error-page id="error"></error-page>
 						</section>
 					</iron-pages>
 				</div>
