fix: Re-add handler for /logout

--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -83,6 +83,10 @@ window.addEventListener('WebComponentsReady', function() {
 		}
 	});
 
+	page('/logout', function() {
+		app.logout();
+	})
+
 	page('/error', function() {
 		var lastError = getLastError();
 		console.log(lastError);
