--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,7 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
 	<!-- Chrome for Android theme color -->
-	<!-- TODO(flowlo): Replace this with a color that suits Coduno. -->
-	<meta name="theme-color" content="#303F9F">
+	<meta name="theme-color" content="#424b4b">
 
 	<!-- Web Application Manifest -->
 	<link rel="manifest" href="manifest.json">
