--- a/app/elements/login-page-password/login-page-password.html
+++ b/app/elements/login-page-password/login-page-password.html
@@ -49,6 +49,11 @@ paper-material > div > paper-button {
 	margin: 0 !important;
 	margin-top: 12px !important;
 }
+paper-icon-button {
+	left: 10px;
+	margin-left: -24px;
+	padding: 0;
+}
 	</style>
 	<template>
 		<paper-material elevation="1">
