login: Fix type for password paper-input

--- a/app/elements/login-page-password/login-page-password.html
+++ b/app/elements/login-page-password/login-page-password.html
@@ -64,7 +64,7 @@ paper-icon-button {
 				</div>
 			</div>
 			<div>
-				<paper-input id="passwordInput" type="text" label="Password" value="{{password}}"></paper-input>
+				<paper-input id="passwordInput" type="password" label="Password" value="{{password}}"></paper-input>
 				<paper-button flat colorful on-click="next">Next</paper-button>
 			</div>
 		</paper-material>
