--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -52,8 +52,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="challenge/challenge-detail.html">
 <link rel="import" href="challenge/challenge-list.html">
+<link rel="import" href="challenge/challenge-card.html">
+<link rel="import" href="challenge/challenge-modal.html">
 
-<link rel="import" href="app-header.html">
+<link rel="import" href="nav-bar.html">
 
 <link rel="import" href="submission/challenge-display.html">
 <link rel="import" href="submission/challenge-page.html">
