Candidate card style

--- a/app/elements/candidates/candidate-list.html
+++ b/app/elements/candidates/candidate-list.html
@@ -10,7 +10,7 @@
 			on-response="onResponse"
 			on-error="onError">
 		</iron-ajax>
-		<div class="horizontal layout wrap">
+    <div class="horizontal layout center-center wrap">
 			<template is="dom-repeat" items="{{items}}">
 				<candidate-card user="{{item}}"></candidate-card>
 			</template>
