--- a/app/elements/candidates/candidate-card.html
+++ b/app/elements/candidates/candidate-card.html
@@ -1,38 +1,34 @@
 <dom-module id="candidate-card">
 	<style>
-		:host {
+		paper-material {
 			width: 300px;
-			height: 300px;
-			margin: 5px;
+			height: 250px;
+			margin: 20px;
+			background: rgb(255,255,255);
 		}
-
-		paper-material > .cardTop {
+		paper-material:hover{
+			background: rgb(200,200,200);
+		}
+		paper-material>.cardTop{
 			position: relative;
 			height: 250px;
-			border-bottom: 1px solid gray;
 			text-overflow: ellipsis;
 		}
-
-		paper-material > .cardTop > .cardTopImage {
+		paper-material>.cardTop>.cardTopImage{
 			position: absolute;
 			bottom: 0;
-			width: 100%;
+			width:100%;
 		}
 
-		paper-material > .cardTop > .cardTopImage > iron-image {
-			height: 200px;
-			width: 200px;
-		}
 
-		paper-material > .cardTop > .cardTopTitle {
+		paper-material>.cardTop>.cardTopTitle{
 			position: absolute;
 			bottom: 0;
 			width: 100%;
 			height: 39px;
-			background-color: rgba(255, 255, 255, 0.4);
 		}
 
-		paper-material > .cardTop > .cardTopTitle > p {
+		paper-material>.cardTop>.cardTopTitle>p{
 			position: absolute;
 			bottom: 5px;
 			left: 15px;
@@ -40,30 +36,27 @@
 			font-size: 25px;
 		}
 
-		paper-material > .cardTop > .cardTopTitle > iron-icon {
+		paper-material>.cardTop>.cardTopTitle>iron-icon{
 			position: absolute;
 			bottom: 5px;
 			right: 15px;
 		}
+		.letter{
+			font-size: 210px;
+			color: #4B4F62;
+		}
 	</style>
 	<template>
-		<paper-material elevation="1" on-mouseover="onMouseover" on-mouseout="onMouseout">
-			<template is="dom-if" if="{{!isHovered}}">
-				<div class="cardTop" align="center">
-					<div class="cardTopImage">
-						<iron-image sizing="contain" src="/images/default_user.png"></iron-image>
-					</div>
-					<div class="cardTopTitle">
-						<p>{{getTitle()}}</p>
-						<iron-icon icon="{{getIcon(user.State)}}"></iron-icon>
-					</div>
+		<paper-material elevation="1">
+			<div class="cardTop" align="center">
+				<div class="cardTopImage">
+					 <text class="letter" x="0" y="0" class="letter">{{getInitialLetter(user)}}</text>
 				</div>
-			</template>
-			<template is="dom-if" if="{{isHovered}}">
-				<div class="cardTop" align="center">
-					<h1>{{user.Name}}</h1>
+				<div class="cardTopTitle">
+					<p>{{getTitle(user)}}</p>
+					<iron-icon icon="{{getIcon(user.State)}}"></iron-icon>
 				</div>
-			</template>
+			</div>
 		</paper-material>
 	</template>
 	<script>
@@ -74,17 +67,13 @@
 					type: Object,
 					notify: true,
 					reflectToAttribute: true
-				},
-				isHovered: {
-					type: Boolean,
-					notify: true
 				}
 			},
-			ready: function () {
+			ready: function(){
 				this.isHovered = false;
 			},
-			getIcon: function (state) {
-				switch (state) {
+			getIcon: function(state){
+				switch(state){
 					case "invited":
 						return "mail";
 					case "coding":
@@ -93,16 +82,11 @@
 						return "done";
 				}
 			},
-			getTitle: function () {
-				return this.user.Name != "" && this.user.Name != undefined ? this.user.Name : this.user.Address;
+			getTitle: function(user){
+				return user.Name != "" && user.Name != undefined ? user.Name : user.Address;
 			},
-			onMouseover: function () {
-				// TODO(victorbalan): Enable hover when we have content
-				// this.isHovered = true;
-			},
-			onMouseout: function () {
-				// TODO(victorbalan): Enable hover when we have content
-				// this.isHovered = false;
+			getInitialLetter: function(user){
+				return (user.Name || user.Address).charAt(0).toUpperCase();
 			}
 		})
 	</script>
