--- a/app/elements/login-page-email/login-page-email.html
+++ b/app/elements/login-page-email/login-page-email.html
@@ -58,7 +58,7 @@ paper-material > div > paper-button {
 				</div>
 			</div>
 			<div>
-				<paper-input type="text" label="Username or e-mail" value="{{email}}"></paper-input>
+				<paper-input type="text" label="Username or e-mail" value="{{email}}" autofocus="true"></paper-input>
 				<paper-button class$="{{empty}}" flat colorful on-change="checkEmpty" on-click="next">Next</paper-button>
 			</div>
 		</paper-material>
